# GDExcelExporter

./: .gitignore  404.html  CONTRIBUTE.md  LICENSE  MANIFEST.in  Pipfile  README.en.md  README.md  build.bat  completed_hook.py  custom_generator.py  ee.py  ee.spec  export.toml  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  sitemap.xml
.github/actions/setup-poetry/: action.yml  actions.yml
.github/workflows/: build.yml  cd.yml  cli.yml  coverage.yml  deploy.yml  python-build.yml  python-package.yml  python-publish.yml  resuse-build-workflow.yml  resuse-build.yml  resuse-coverage.yml  resuse-test.yml  test.yml  test_gd.yml
.github/workflows/reuses/: coverage.yml  test.yml
Sample/Godot/用Resources作为数据源/: Data.gd  Item.tres  README.md  Settings.gd  generator.py
Sample/Godot/用Resources作为数据源/CustomGenerator/: completed_hook.py
Sample/Godot/用Resources作为数据源/Settings/道具/: Item.tres
Sample/Godot/直接用GDScript作为数据源/: Item.gd  README.md  Settings.gd  export.toml  generator.py  run.bat
Sample/Godot/直接用GDScript作为数据源/CustomGenerator/: completed_hook.py  generator.py
Sample/Godot/直接用GDScript作为数据源/Excel/: 道具.xlsx
Sample/Godot/直接用GDScript作为数据源/Settings/道具/: Item.gd
Setting/reg/: 添加右键导出所有.reg
docs/: index.md  入门.md
docs/指南/: POT本地化多语言支持.md  excel表规范.md  export.toml.md  多语言支持.md  导出器说明.md  目录.md
search/: search_index.json
src/: ee.py
src/excelexporter/: __init__.py  __main__.py  cli.py  config.py  engine.py  exporter.py  generator.py  logger.py  sheetdata.py
src/excelexporter/babel/: godot.py  json.py
src/excelexporter/generator/: godot_script.py
src/excelexporter/generators/: __init__.py  godot_script_1.py  godot_script_2.py  json.py  json2.py  resource.py
src/excelexporter/generators/gds1/: __init__.py  data_template.gd  setting_template.gd
src/excelexporter/generators/gds2/: __init__.py  data_template.gd  template.gd
src/excelexporter/generators/json/: __init__.py
src/excelexporter/generators/json2/: __init__.py
src/excelexporter/generators/resource/: __init__.py
src/excelexporter/parser/: __init__.py  field_parser.py
src/excelexporter/template/: babel.cfg  gen_pot.bat  示例.xlsx
src/excelexporter/template/reg/: 添加右键导出.reg  添加右键导出所有.reg
src/excelexporter/template/sample/: 示例.xlsx
src/gd_excelexporter/: __init__.py  __main__.py  cli.py  config.py  converter.py  engine.py  exceptions.py  logger.py  models.py  utils.py
src/gd_excelexporter/babel/: csharp.py
src/gd_excelexporter/base/: __init__.py  engine.py  generator.py
src/gd_excelexporter/converters/: __init__.py  string.py
src/gd_excelexporter/core/: __init__.py  engine.py  generator.py  models.py  type_define.py
src/gd_excelexporter/engines/: __init__.py  xlrd_engine.py  xlwings_engine.py
src/gd_excelexporter/generators/: __init__.py
src/gd_excelexporter/generators/gds1/: __init__.py  data_template.gd
src/gd_excelexporter/generators/gds2/: __init__.py  data_template.gd  setting_template.gd
src/gd_excelexporter/generators/json1/: __init__.py
src/gd_excelexporter/generators/json2/: __init__.py
src/gd_excelexporter/generators/resource/: __init__.py
src/gd_excelexporter/template/: babel.cfg
src/gd_excelexporter/template/sample/: 示例.xlsx
src/gd_excelexporter/type_defines/: __init__.py  array.py  array_bool.py  array_str.py  bool.py  dict.py  float.py  function.py  int.py  string.py  tr_array_str.py  tr_dict.py  tr_string.py
test/: export.toml  test_cli.py  test_config.py  test_converter.py  test_engine.py  test_field_parser.py  test_type_define.py  test_typedefine.py
test/2/: export.toml
test/2/reg/: 添加右键导出.reg
test/Setting/: export.toml  gen_all.bat
test/Setting/data/: 示例.xlsx
test/Setting/reg/: 删除右键导出所有.reg
test/data/: test.xlsx  示例.xlsx  道具.xls  道具2.xls  道具2.xlsx
test/settings/: babel.cfg  export.toml  language.gd  log.txt
test/settings/reg/: 删除右键导出.reg
test_gd4/: icon.svg.import  main.tscn  project.godot
test_gd4/addons/gdUnit4/: GdUnitRunner.cfg
test_gd4/reports/report_1/: index.html  results.xml
test_gd4/reports/report_1/css/: icon.png.import
test_gd4/reports/report_1/path/: test.html
test_gd4/reports/report_1/test_suites/: test.test_data.html
test_gd4/reports/report_2/: index.html  logging_not_available.html  results.xml
test_gd4/reports/report_2/css/: icon.png.import
test_gd4/reports/report_2/path/: test.html
test_gd4/reports/report_2/test_suites/: test.test_data.html
test_gd4/settings/: export.toml
test_gd4/settings/data/: ~$示例.xlsx  示例.xlsx
test_gd4/settings/sample/: 示例.xlsx
test_gd4/test/: test_data.gd
入门/: index.html
指南/POT本地化多语言支持/: index.html
指南/excel表规范/: index.html
指南/export.toml/: index.html
指南/多语言支持/: index.html
指南/导出器说明/: index.html
指南/目录/: index.html
