[tool.poetry]
name = "gd-excelexporter"
version = "2.0.1"
description = "Godot Excel导表工具"
authors = ["kaluluosi <kaluluosi@gamil.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "excelexporter", from = "src" }
]

[tool.poetry.scripts]
ee = "excelexporter.cli:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
click = "^8.1.3"
xlwings = "^0.29.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
