[tool.poetry]
name = "gd-excelexporter"
version = "2.1.4"
description = "Godot Excel导表工具"
authors = ["kaluluosi <kaluluosi@gamil.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "excelexporter", from = "src" }
]

[tool.poetry.scripts]
ee = "excelexporter.cli:main"

[tool.poetry.plugins."excelexporter.generator"]
"GDS2.0" = "excelexporter.generators.gds2"
"GDS1.0" = "excelexporter.generators.gds1"
"JSON1.0" = "excelexporter.generators.json"
"JSON2.0" = "excelexporter.generators.json2"
"RESOURCE" = "excelexporter.generators.resource"

[tool.poetry.plugins."babel.extractors"]
"godot_scene" = "excelexporter.babel.godot:extract_godot_scene"
"godot_resource" = "excelexporter.babel.godot:extract_godot_resource"
"godot_json" = "excelexporter.babel.json:extract_godot_json"
"godot_csharp" = "excelexporter.babel.json:extract_godot_csharp"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
click = "^8.1.3"
xlwings = "^0.29.0"
toml = "^0.10.2"
jinja2 = "^3.1.2"
babel = "^2.12.1"
importlib-metadata = {version = "^6.1.0", python = "38"}
setuptools = "^67.6.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.1"


[tool.poetry.group.test.dependencies]
coverage = "^7.2.2"


[tool.poetry.group.build.dependencies]
nuitka = "1.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
