[tool.poetry]
name = "gd_excelexporter"
version = "2.1.5"
description = "Godot Excel导表工具"
authors = ["kaluluosi <kaluluosi@gamil.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gd_excelexporter", from = "src" }]

[tool.poetry.scripts]
ee = "gd_excelexporter.cli:cli"

[tool.poetry.plugins."gd_excelexporter.generator"]
"GDS2.0" = "gd_excelexporter.generators.gds2:GDS2Generator"
"GDS1.0" = "gd_excelexporter.generators.gds1:GDS1Generator"
"JSON1.0" = "gd_excelexporter.generators.json1:JSON1Generator"
"JSON2.0" = "gd_excelexporter.generators.json2:JSON2Generator"
"RESOURCE" = "gd_excelexporter.generators.resource:ResourceGenerator"

[tool.poetry.plugins."gd_excelexporter.type_define"]
"id" = "gd_excelexporter.type_defines.int:Int"
"string" = "gd_excelexporter.type_defines.string:String"
"int" = "gd_excelexporter.type_defines.int:Int"
"float" = "gd_excelexporter.type_defines.float:Float"
"dict" = "gd_excelexporter.type_defines.dict:Dict"
"bool" = "gd_excelexporter.type_defines.bool:Bool"
"array" = "gd_excelexporter.type_defines.array:Array"
"array_str" = "gd_excelexporter.type_defines.array_str:ArrayStr"
"array_bool" = "gd_excelexporter.type_defines.array_bool:ArrayBool"
"function" = "gd_excelexporter.type_defines.function:Function"
"tr_string" = "gd_excelexporter.type_defines.tr_string:TrString"
"tr_array_str" = "gd_excelexporter.type_defines.tr_array_str:TrArrayStr"
"tr_dict" = "gd_excelexporter.type_defines.tr_dict:TrDict"


[tool.poetry.plugins."babel.extractors"]
"godot_scene" = "gd_excelexporter.babel.godot:extract_godot_scene"
"godot_resource" = "gd_excelexporter.babel.godot:extract_godot_resource"
"godot_json" = "gd_excelexporter.babel.json:extract_godot_json"
"godot_csharp" = "gd_excelexporter.babel.json:extract_godot_csharp"

[tool.poetry.plugins."gd_excelexporter.engine"]
"xlwings" = "gd_excelexporter.engines.xlwings_engine:XlwingsEngine"
"xlrd" = "gd_excelexporter.engines.xlrd_engine:XlrdEngine"

[tool.poetry.dependencies]
python = ">=3.8,<=3.12"
click = "^8.1.3"
toml = "^0.10.2"
jinja2 = "^3.1.2"
babel = "^2.12.1"
importlib-metadata = { version = "^6.1.0", python = "38" }
setuptools = "^67.6.1"
pydantic = "^2.7.0"
xlrd = "1.2"
xlwings = "^0.31.1"


[tool.poetry.group.test.dependencies]
coverage = "^7.2.2"
pytest = "^8.1.1"


[tool.poetry.group.build.dependencies]
nuitka = "1.5.4"


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.1.21"
ruff = "^0.3.7"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
