[metadata]
name = ExcelExporter
version = file:VERSION
author = kaluluosi
author_email = kalluosi@qq.com
url = 
platforms = Windows, MacOS
description = Excel导出工具
long_desctiption = file: README.md
keywords = Exporter, Excel, Generator
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    = src

python_requires = >3.6
# 不许在这里写依赖安装配置，以后包的依赖会直接自动根据Pipfile.packages自动注入
# install_requires = 
#     pocoui

[options.entry_points]
console_scripts = 
    ee=excelexporter.__main__:main

[options.packages.find]
where = src
